--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/multer": "^1.4.11",
     "cloudinary": "^2.2.0",
     "cors": "^2.8.5",
+    "debug": "^4.3.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-oauth2-jwt-bearer": "^1.6.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.2",
